--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"limestaroo.aternos.me:31900","name":"wallkersmp","port":"31900"}
+{"ip":"limestaroo.aternos.me","name":"wallkersmp","port":"16269"}
